# DirDiff

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Calculator.hpp  DiffResults.cpp  DiffResults.h  DiffResults.hpp  DirDiff.sln  DirDiff.vcxproj  DirDiff.vcxproj.filters  Main.cpp  README.md
Task/: Description.txt
